kubernetes/main/apps/network/envoy-gateway/config/internal.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname internal.zinn.ca
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.11.1.21
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
    - name: grpc
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: GRPCRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
    - name: mcp
      protocol: HTTPS
      port: 8090
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
